strategy pattern with jdk25 updated.(https://rockthejvm.com/articles/structured-concurrency-jdk-25)